--- a/classification/ui.ipynb
+++ b/classification/ui.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,10 @@
     "        delta_val = float(delta.get())\n",
     "        cam_col_val = float(cam_col.get())\n",
     "        redshift_val = float(redshift.get())\n",
-    "        plate_val = float(plate.get())\n",
-    "        MJD_val = float(MJD.get())\n",
     "        photometric_val = float(photometric.get())\n",
     "        \n",
     "        # creating the numpy array of the input values\n",
-    "        input_data = n.array([[alpha_val, delta_val, cam_col_val, redshift_val, plate_val, MJD_val, photometric_val]])\n",
+    "        input_data = n.array([[alpha_val, delta_val, cam_col_val, redshift_val, photometric_val]])\n",
     "        \n",
     "        # Scaling the input data\n",
     "        input_data = scaler.transform(input_data)\n",
@@ -104,16 +102,6 @@
     "redshift_label.pack()\n",
     "redshift = tk.Entry(root)\n",
     "redshift.pack()\n",
-    "\n",
-    "plate_label = tk.Label(root, text=\"Plate\", bg=\"light blue\")\n",
-    "plate_label.pack()\n",
-    "plate = tk.Entry(root)\n",
-    "plate.pack()\n",
-    "\n",
-    "MJD_label = tk.Label(root, text=\"MJD\", bg=\"light blue\")\n",
-    "MJD_label.pack()\n",
-    "MJD = tk.Entry(root)\n",
-    "MJD.pack()\n",
     "\n",
     "photometric_label = tk.Label(root, text=\"Photometric filter\", bg=\"light blue\")\n",
     "photometric_label.pack()\n",
