--- a/classification/xgboost.ipynb
+++ b/classification/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +56,6 @@
        "      <th>cam_col</th>\n",
        "      <th>class</th>\n",
        "      <th>redshift</th>\n",
-       "      <th>plate</th>\n",
-       "      <th>MJD</th>\n",
        "      <th>photometric_filters</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -69,8 +67,6 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0.634794</td>\n",
-       "      <td>5812</td>\n",
-       "      <td>56354</td>\n",
        "      <td>21.431178</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -80,8 +76,6 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0.779136</td>\n",
-       "      <td>10445</td>\n",
-       "      <td>58158</td>\n",
        "      <td>22.923626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -91,8 +85,6 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0.644195</td>\n",
-       "      <td>4576</td>\n",
-       "      <td>55592</td>\n",
        "      <td>22.010612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -102,8 +94,6 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0.932346</td>\n",
-       "      <td>9149</td>\n",
-       "      <td>58039</td>\n",
        "      <td>21.773891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -113,8 +103,6 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0.116123</td>\n",
-       "      <td>6121</td>\n",
-       "      <td>56187</td>\n",
        "      <td>17.387107</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -122,22 +110,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        alpha      delta  cam_col  class  redshift  plate    MJD  \\\n",
-       "0  135.689107  32.494632        2      0  0.634794   5812  56354   \n",
-       "1  144.826101  31.274185        5      0  0.779136  10445  58158   \n",
-       "2  142.188790  35.582444        2      0  0.644195   4576  55592   \n",
-       "3  338.741038  -0.402828        3      0  0.932346   9149  58039   \n",
-       "4  345.282593  21.183866        3      0  0.116123   6121  56187   \n",
-       "\n",
-       "   photometric_filters  \n",
-       "0            21.431178  \n",
-       "1            22.923626  \n",
-       "2            22.010612  \n",
-       "3            21.773891  \n",
-       "4            17.387107  "
+       "        alpha      delta  cam_col  class  redshift  photometric_filters\n",
+       "0  135.689107  32.494632        2      0  0.634794            21.431178\n",
+       "1  144.826101  31.274185        5      0  0.779136            22.923626\n",
+       "2  142.188790  35.582444        2      0  0.644195            22.010612\n",
+       "3  338.741038  -0.402828        3      0  0.932346            21.773891\n",
+       "4  345.282593  21.183866        3      0  0.116123            17.387107"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100000, 8)"
+       "(100000, 6)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +175,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +210,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape: (56883, 7)\n",
+      "X_train shape: (56883, 5)\n",
       "y_train shape: (56883,)\n"
      ]
     }
@@ -260,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -349,16 +330,16 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      Galaxy       0.93      0.96      0.94      5725\n",
-      "      Quasar       0.97      0.93      0.95      5669\n",
+      "      Galaxy       0.91      0.96      0.93      5725\n",
+      "      Quasar       0.96      0.91      0.93      5669\n",
       "        Star       0.99      1.00      1.00      5671\n",
       "\n",
-      "    accuracy                           0.96     17065\n",
-      "   macro avg       0.96      0.96      0.96     17065\n",
-      "weighted avg       0.96      0.96      0.96     17065\n",
+      "    accuracy                           0.95     17065\n",
+      "   macro avg       0.96      0.95      0.95     17065\n",
+      "weighted avg       0.96      0.95      0.95     17065\n",
       "\n",
       "\n",
-      "Model overall accuracy: 96.17%\n"
+      "Model overall accuracy: 95.45%\n"
      ]
     }
    ],
