--- a/Regression/adm.ipynb
+++ b/Regression/adm.ipynb
@@ -26963,7 +26963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27058,7 +27058,7 @@
     "vif_data = pd.DataFrame()\n",
     "vif_data[\"feature\"] = df.columns\n",
     "vif_data[\"VIF\"] = [variance_inflation_factor(df.values, i) for i in range(len(df.columns))]\n",
-    "vif_data\n"
+    "vif_data"
    ]
   },
   {
