--- a/classification/About-Dataset.ipynb
+++ b/classification/About-Dataset.ipynb
@@ -38,13 +38,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.11"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
