--- a/Regression/PyTorch.ipynb
+++ b/Regression/PyTorch.ipynb
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "    # Set random seed for consistent results\n",
+    "# Setting up random seed for consistent results\n",
     "torch.manual_seed(42)"
    ]
   },
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "7fd06ece",
    "metadata": {},
    "outputs": [
@@ -981,8 +981,8 @@
     "model.eval()\n",
     "test_mae = 0.0\n",
     "test_mse = 0.0\n",
-    "all_predictions = []\n",
-    "all_targets = []\n",
+    "predictions = []\n",
+    "targets = []\n",
     "\n",
     "with torch.no_grad():\n",
     "    for X_batch, y_batch in test_loader:\n",
@@ -990,23 +990,24 @@
     "        y_batch = y_batch.to(device)\n",
     "        y_pred = model(X_batch)\n",
     "        \n",
+    "        # Collecting mae and mse \n",
     "        test_mae += torch.sum(torch.abs(y_pred - y_batch)).item()\n",
     "        test_mse += torch.sum((y_pred - y_batch) ** 2).item()\n",
-    "        \n",
-    "        all_predictions.extend(y_pred.cpu().numpy().flatten())\n",
-    "        all_targets.extend(y_batch.cpu().numpy().flatten())\n",
+    "        # Collecting arrays for R2\n",
+    "        predictions.extend(y_pred.cpu().numpy().flatten())\n",
+    "        targets.extend(y_batch.cpu().numpy().flatten())\n",
     "\n",
     "test_mae /= len(test_dataset)\n",
     "test_mse /= len(test_dataset)\n",
     "test_rmse = np.sqrt(test_mse)\n",
     "\n",
-    "# Calculate R2 score\n",
-    "test_r2 = r2_score(all_targets, all_predictions)\n",
+    "# Calculating R2 \n",
+    "test_r2 = r2_score(targets, predictions)\n",
     "\n",
     "print(f\"Test MAE = {test_mae:.4f}\")\n",
     "print(f\"Test MSE = {test_mse:.4f}\")\n",
     "print(f\"Test RMSE = {test_rmse:.4f}\")\n",
-    "print(f\"Test R2 Score = {test_r2:.4f}\")\n"
+    "print(f\"Test R2 Score = {test_r2:.4f}\")"
    ]
   },
   {
@@ -1048,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "66c3aad9",
    "metadata": {},
    "outputs": [
@@ -1064,8 +1065,8 @@
     }
    ],
    "source": [
-    "actuals = np.array(all_targets)\n",
-    "predictions = np.array(all_predictions)\n",
+    "actuals = np.array(targets)\n",
+    "predictions = np.array(predictions)\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "plt.figure(figsize=(8, 6))\n",
