--- a/Regression/Explor_Prepros.ipynb
+++ b/Regression/Explor_Prepros.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
          "type": "string"
         }
        ],
-       "ref": "07680256-e989-46cc-898c-ef7cbe1bf398",
+       "ref": "06e169ad-5b8e-4d2a-818c-59373fff0e5c",
        "rows": [
         [
          "0",
@@ -506,7 +506,7 @@
        "9    Weekday      Monday  Light_Load  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
          "type": "float"
         }
        ],
-       "ref": "d61effff-ff7e-447d-97f1-82381d08e242",
+       "ref": "6096d60c-5fc5-4abb-9e8f-0ed5359d31c7",
        "rows": [
         [
          "count",
@@ -915,7 +915,7 @@
        "max    85500.000000  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
          "type": "integer"
         }
        ],
-       "ref": "f4539e27-ce79-4e6c-b97f-67c49d701503",
+       "ref": "1cde4ff5-4179-4132-9336-eb5b76afc8cf",
        "rows": [
         [
          "0",
@@ -1282,7 +1282,7 @@
        "4      Monday  Light_Load      1    1     1        1  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
          "type": "integer"
         }
        ],
-       "ref": "ec74a913-6c4a-4972-ba06-35f0262409c7",
+       "ref": "cc2f3462-8646-4a44-a0c5-17cb43cce6f4",
        "rows": [
         [
          "0",
@@ -1719,7 +1719,7 @@
        "4                      0  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
        "(29784, 16)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2015,18 +2015,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's drop minute, Days of week\n",
     "df = df.drop(['Day_of_week_Wednesday', 'Day_of_week_Thursday',\n",
-    "            'Day_of_week_Monday', 'Day_of_week_Tuesday', 'day', 'WeekStatus'] , axis=1)"
+    "            'Day_of_week_Monday', 'Day_of_week_Tuesday', 'day', 'WeekStatus' , 'Quarter'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
