--- a/CNN_Times_series/Prepro.ipynb
+++ b/CNN_Times_series/Prepro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ed8d2615",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "id": "cbefee84",
    "metadata": {},
    "outputs": [
@@ -66,7 +64,7 @@
          "type": "integer"
         }
        ],
-       "ref": "547eef9c-e30f-440d-9401-ff1e72757f3b",
+       "ref": "c24c4649-8ea7-448d-9f33-c020e3949b30",
        "rows": [
         [
          "0",
@@ -223,7 +221,7 @@
        "4       0.004767          1  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,6 +230,223 @@
     "# Load the dataset\n",
     "df  = pd.read_csv('room_occupay.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "47bd1e3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "date",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Temperature",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Humidity",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Light",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "CO2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "HumidityRatio",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Occupancy",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "5e0b97e0-c3e4-4dd4-b13f-3e6054426b27",
+       "rows": [
+        [
+         "20555",
+         "2015-02-10 09:29:00",
+         "21.05",
+         "36.0975",
+         "433.0",
+         "787.25",
+         "0.0055787135318827",
+         "1"
+        ],
+        [
+         "20556",
+         "2015-02-10 09:29:59",
+         "21.05",
+         "35.995",
+         "433.0",
+         "789.5",
+         "0.0055627309270867",
+         "1"
+        ],
+        [
+         "20557",
+         "2015-02-10 09:30:59",
+         "21.1",
+         "36.095",
+         "433.0",
+         "798.5",
+         "0.0055956390183456",
+         "1"
+        ],
+        [
+         "20558",
+         "2015-02-10 09:32:00",
+         "21.1",
+         "36.26",
+         "433.0",
+         "820.333333333333",
+         "0.0056214493735085",
+         "1"
+        ],
+        [
+         "20559",
+         "2015-02-10 09:33:00",
+         "21.1",
+         "36.2",
+         "447.0",
+         "821.0",
+         "0.005612063544187",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Light</th>\n",
+       "      <th>CO2</th>\n",
+       "      <th>HumidityRatio</th>\n",
+       "      <th>Occupancy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20555</th>\n",
+       "      <td>2015-02-10 09:29:00</td>\n",
+       "      <td>21.05</td>\n",
+       "      <td>36.0975</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>787.250000</td>\n",
+       "      <td>0.005579</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20556</th>\n",
+       "      <td>2015-02-10 09:29:59</td>\n",
+       "      <td>21.05</td>\n",
+       "      <td>35.9950</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>789.500000</td>\n",
+       "      <td>0.005563</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20557</th>\n",
+       "      <td>2015-02-10 09:30:59</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>36.0950</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>798.500000</td>\n",
+       "      <td>0.005596</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20558</th>\n",
+       "      <td>2015-02-10 09:32:00</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>36.2600</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>820.333333</td>\n",
+       "      <td>0.005621</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20559</th>\n",
+       "      <td>2015-02-10 09:33:00</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>36.2000</td>\n",
+       "      <td>447.0</td>\n",
+       "      <td>821.000000</td>\n",
+       "      <td>0.005612</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      date  Temperature  Humidity  Light         CO2  \\\n",
+       "20555  2015-02-10 09:29:00        21.05   36.0975  433.0  787.250000   \n",
+       "20556  2015-02-10 09:29:59        21.05   35.9950  433.0  789.500000   \n",
+       "20557  2015-02-10 09:30:59        21.10   36.0950  433.0  798.500000   \n",
+       "20558  2015-02-10 09:32:00        21.10   36.2600  433.0  820.333333   \n",
+       "20559  2015-02-10 09:33:00        21.10   36.2000  447.0  821.000000   \n",
+       "\n",
+       "       HumidityRatio  Occupancy  \n",
+       "20555       0.005579          1  \n",
+       "20556       0.005563          1  \n",
+       "20557       0.005596          1  \n",
+       "20558       0.005621          1  \n",
+       "20559       0.005612          1  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
@@ -463,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "450358d5",
    "metadata": {},
    "outputs": [
@@ -496,6 +711,7 @@
     "df['minute'] = df['date'].dt.minute\n",
     "df['hour'] = df['date'].dt.hour\n",
     "df['day'] = df['date'].dt.day\n",
+    "\n",
     "df = df.drop('date', axis=1)\n",
     "df.info()"
    ]
