The date column is fixed

--- a/CNN_Times_series/Prepro.ipynb
+++ b/CNN_Times_series/Prepro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed8d2615",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "387321ea",
    "metadata": {},
    "outputs": [],
@@ -25,76 +25,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "02db1a8a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9752, 7)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the test dataset\n",
-    "df_train = pd.read_csv('datatest2.txt')\n",
-    "df_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cbefee84",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2665, 7)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "df_test = pd.read_csv('datatest2.txt')\n",
     "# Load the  validation dataset\n",
     "df_val = pd.read_csv('datatest.txt')\n",
-    "df_val.shape"
+    "# loading the training data\n",
+    "df_train = pd.read_csv('datatraining.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2485f4d3",
+   "execution_count": null,
+   "id": "bd59f870",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(8143, 7)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train dataset shape: (8143, 7)\n",
+      "Validation dataset shape: (2665, 7)\n",
+      "Test dataset shape: (9752, 7)\n"
+     ]
     }
    ],
    "source": [
-    "# loading the training data\n",
-    "df_test = pd.read_csv('datatraining.txt')\n",
-    "df_test.shape"
+    "# so let's check the shape of each DS\n",
+    "print(\"Train dataset shape:\", df_train.shape)\n",
+    "print(\"Validation dataset shape:\", df_val.shape)\n",
+    "print(\"Test dataset shape:\", df_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "47bd1e3d",
    "metadata": {},
    "outputs": [
@@ -143,56 +112,56 @@
          "type": "integer"
         }
        ],
-       "ref": "2282ab9a-d450-43d3-b0ad-7b6240c28366",
+       "ref": "f8d418cd-86d9-4218-82ff-fcd725f471d8",
        "rows": [
         [
          "1",
-         "2015-02-11 14:48:00",
-         "21.76",
-         "31.1333333333333",
-         "437.333333333333",
-         "1029.66666666667",
-         "0.0050210108902138",
+         "2015-02-04 17:51:00",
+         "23.18",
+         "27.272",
+         "426.0",
+         "721.25",
+         "0.0047929881765052",
          "1"
         ],
         [
          "2",
-         "2015-02-11 14:49:00",
-         "21.79",
-         "31.0",
-         "437.333333333333",
-         "1000.0",
-         "0.0050085812748017",
+         "2015-02-04 17:51:59",
+         "23.15",
+         "27.2675",
+         "429.5",
+         "714.0",
+         "0.0047834409493106",
          "1"
         ],
         [
          "3",
-         "2015-02-11 14:50:00",
-         "21.7675",
-         "31.1225",
-         "434.0",
-         "1003.75",
-         "0.0050215691326541",
+         "2015-02-04 17:53:00",
+         "23.15",
+         "27.245",
+         "426.0",
+         "713.5",
+         "0.0047794635244219",
          "1"
         ],
         [
          "4",
-         "2015-02-11 14:51:00",
-         "21.7675",
-         "31.1225",
-         "439.0",
-         "1009.5",
-         "0.0050215691326541",
+         "2015-02-04 17:54:00",
+         "23.15",
+         "27.2",
+         "426.0",
+         "708.25",
+         "0.0047715088260817",
          "1"
         ],
         [
          "5",
-         "2015-02-11 14:51:59",
-         "21.79",
-         "31.1333333333333",
-         "437.333333333333",
-         "1005.66666666667",
-         "0.0050302977786788",
+         "2015-02-04 17:55:00",
+         "23.1",
+         "27.2",
+         "426.0",
+         "704.5",
+         "0.0047569929333151",
          "1"
         ]
        ],
@@ -232,52 +201,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2015-02-11 14:48:00</td>\n",
-       "      <td>21.7600</td>\n",
-       "      <td>31.133333</td>\n",
-       "      <td>437.333333</td>\n",
-       "      <td>1029.666667</td>\n",
-       "      <td>0.005021</td>\n",
+       "      <td>2015-02-04 17:51:00</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>27.2720</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>721.25</td>\n",
+       "      <td>0.004793</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-02-11 14:49:00</td>\n",
-       "      <td>21.7900</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>437.333333</td>\n",
-       "      <td>1000.000000</td>\n",
-       "      <td>0.005009</td>\n",
+       "      <td>2015-02-04 17:51:59</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2675</td>\n",
+       "      <td>429.5</td>\n",
+       "      <td>714.00</td>\n",
+       "      <td>0.004783</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2015-02-11 14:50:00</td>\n",
-       "      <td>21.7675</td>\n",
-       "      <td>31.122500</td>\n",
-       "      <td>434.000000</td>\n",
-       "      <td>1003.750000</td>\n",
-       "      <td>0.005022</td>\n",
+       "      <td>2015-02-04 17:53:00</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2450</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>713.50</td>\n",
+       "      <td>0.004779</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-02-11 14:51:00</td>\n",
-       "      <td>21.7675</td>\n",
-       "      <td>31.122500</td>\n",
-       "      <td>439.000000</td>\n",
-       "      <td>1009.500000</td>\n",
-       "      <td>0.005022</td>\n",
+       "      <td>2015-02-04 17:54:00</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2000</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>708.25</td>\n",
+       "      <td>0.004772</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2015-02-11 14:51:59</td>\n",
-       "      <td>21.7900</td>\n",
-       "      <td>31.133333</td>\n",
-       "      <td>437.333333</td>\n",
-       "      <td>1005.666667</td>\n",
-       "      <td>0.005030</td>\n",
+       "      <td>2015-02-04 17:55:00</td>\n",
+       "      <td>23.10</td>\n",
+       "      <td>27.2000</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>704.50</td>\n",
+       "      <td>0.004757</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -285,22 +254,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                  date  Temperature   Humidity       Light          CO2  \\\n",
-       "1  2015-02-11 14:48:00      21.7600  31.133333  437.333333  1029.666667   \n",
-       "2  2015-02-11 14:49:00      21.7900  31.000000  437.333333  1000.000000   \n",
-       "3  2015-02-11 14:50:00      21.7675  31.122500  434.000000  1003.750000   \n",
-       "4  2015-02-11 14:51:00      21.7675  31.122500  439.000000  1009.500000   \n",
-       "5  2015-02-11 14:51:59      21.7900  31.133333  437.333333  1005.666667   \n",
+       "                  date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
+       "1  2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
+       "2  2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
+       "3  2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
+       "4  2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
+       "5  2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
        "\n",
-       "   HumidityRatio  Occupancy  \n",
-       "1       0.005021          1  \n",
-       "2       0.005009          1  \n",
-       "3       0.005022          1  \n",
-       "4       0.005022          1  \n",
-       "5       0.005030          1  "
+       "   Occupancy  \n",
+       "1          1  \n",
+       "2          1  \n",
+       "3          1  \n",
+       "4          1  \n",
+       "5          1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a524e9a0",
    "metadata": {},
    "outputs": [
@@ -360,7 +329,7 @@
          "type": "integer"
         }
        ],
-       "ref": "93e70794-0741-4083-926a-5db12657100b",
+       "ref": "9502716e-d329-45b0-b564-b3ce009d8881",
        "rows": [
         [
          "140",
@@ -517,7 +486,7 @@
        "144       0.004767          1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,6 +710,17 @@
    ],
    "source": [
     "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ea3febd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The time difference range is 59, 60 and 61 seconds, 24 hours, \n",
+    "# total duration 5 days, 15 hours and 42 min. 2015-02-04 17:51 to 5-02-10 09:3"
    ]
   },
   {
